--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -60,7 +60,7 @@
   border: none;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $mediumDeviceWidth) {
   .contacts--bg-gray {
     background-color: $bgColorTypeOne;
   }
@@ -112,7 +112,7 @@
   }
 }
 
-@media (min-width: 1440px) {
+@media (min-width: $largeDeviceWidth) {
   .contacts {
     background-color: #ffffff;
   }
