--- a/source/sass/blocks/categories-item.scss
+++ b/source/sass/blocks/categories-item.scss
@@ -42,7 +42,7 @@
   border-bottom: 1px solid #d9d9d9;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $mediumDeviceWidth) {
   .categories-item {
     margin-bottom: 31px;
     padding-top: 40px;
@@ -78,7 +78,7 @@
   }
 }
 
-@media (min-width: 1440px) {
+@media (min-width: $largeDeviceWidth) {
   .categories-item {
     margin-bottom: 0;
     padding-top: 40px;
