--- a/source/sass/blocks/client-contacts.scss
+++ b/source/sass/blocks/client-contacts.scss
@@ -78,18 +78,42 @@
   flex-grow: 1;
 }
 
-.client-contacts__input-email {
-  background-image: url("../img/icon-mail.svg");
-  background-repeat: no-repeat;
-  background-position: 93% 50%;
-  background-size: 18px 14px;
+.client-contacts__wrapper--mail {
+  position: relative;
 }
 
-.client-contacts__input-phone {
-  background-image: url("../img/icon-phone.svg");
-  background-repeat: no-repeat;
-  background-position: 93% 50%;
-  background-size: 20px 20px;
+.client-contacts__input-email--icon {
+  position: absolute;
+  top: 50%;
+  right: 16px;
+
+  width: 17px;
+  height: 13px;
+
+  transform: translateY(-50%);
+}
+
+.client-contacts__wrapper--phone {
+  position: relative;
+}
+
+.client-contacts__input-phone--icon {
+  position: absolute;
+  top: 50%;
+  right: 13px;
+
+  width: 20px;
+  height: 20px;
+
+  transform: translateY(-50%);
+}
+
+.client-contacts__input:active + svg path {
+  fill: #68b738;
+}
+
+.client-contacts__input:focus + svg path {
+  fill: #68b738;
 }
 
 //Стили для средней ширины
