--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -9,7 +9,29 @@
   border-top: $borderGrayTypeFour;
 }
 
-@media (min-width: 768px) {
+.copyright__company {
+  display: flex;
+
+  width: 100%;
+
+  justify-content: space-between;
+  align-items: center;
+  flex-basis: 100%;
+}
+
+.copyright__company:hover path {
+  fill: #68b738;
+}
+
+.copyright__company:active {
+  color: rgba(68, 68, 68, 0.3);
+}
+
+.copyright__company:active path {
+  opacity: 0.3;
+}
+
+@media (min-width: $mediumDeviceWidth) {
   .copyright {
     padding-top: 0;
 
