--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -35,7 +35,19 @@
   word-wrap: break-word;
 }
 
-@media (min-width: 768px) {
+.page-header__logo-image:hover {
+  opacity: 0.8;
+}
+
+.page-header__logo-image:focus {
+  opacity: 0.8;
+}
+
+.page-header__logo-image:active {
+  opacity: 0.6;
+}
+
+@media (min-width: $mediumDeviceWidth) {
   .page-header__container {
     display: flex;
 
@@ -55,7 +67,7 @@
   }
 }
 
-@media (min-width: 1440px) {
+@media (min-width: $largeDeviceWidth) {
   .page-header {
     width: $largeDeviceWidth;
     min-height: 696px;
