--- a/source/sass/blocks/program-form.scss
+++ b/source/sass/blocks/program-form.scss
@@ -65,6 +65,65 @@
   margin-bottom: 7px;
 }
 
+.program-form__input:hover {
+  border: $borderGrayTypeThree;
+}
+
+.program-form__input:focus {
+  border-color: transparent;
+  outline: $borderGrayTypeFive;
+}
+
+.program-form__input:active {
+  border-color: transparent;
+  outline: $borderGrayTypeFive;
+}
+
+.program-form__input--error {
+  border-color: transparent;
+  outline: $borderGrayTypeSix;
+}
+
+.program-form__input--error + svg path {
+  fill: #ff8282;
+}
+
+.program-form__radio-btn:hover {
+  &::before {
+    border: 1px solid #bcbcbc;
+  }
+}
+
+.program-form__radio-btn:active {
+  color: rgba(17, 17, 17, 0.3);
+
+  &::before {
+    opacity: 0.3;
+  }
+
+  &::after {
+    opacity: 0.3;
+  }
+}
+
+.program-form__checkbox-btn:hover {
+  &::before {
+    border: 1px solid #bcbcbc;
+  }
+}
+
+.program-form__checkbox-btn:active {
+  color: rgba(17, 17, 17, 0.3);
+
+  &::before {
+    opacity: 0.3;
+  }
+
+  &::after {
+    opacity: 0.3;
+  }
+}
+
 .program-form__button-wrapper {
   padding: 0 20px 33px;
 }
