--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -45,7 +45,7 @@
   display: inline-block;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $mediumDeviceWidth) {
   .promo {
     padding-right: 30px;
     padding-left: 118px;
@@ -94,7 +94,7 @@
   }
 }
 
-@media (min-width: 1440px) {
+@media (min-width: $largeDeviceWidth) {
   .promo {
     height: 0;
     min-height: 0;
@@ -105,7 +105,7 @@
 
   .promo__title {
     margin-top: -500px;
-    padding-right: 720px;
+    padding-right: 700px;
   }
 
   .promo__image {
