--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -8,6 +8,9 @@ $borderGrayTypeOne: 1px solid #e6e6e6;
 $borderGrayTypeTwo: 1px solid #ededed;
 $borderGrayTypeThree: 1px solid #cdcdcd;
 $borderGrayTypeFour: 1px solid #d9d9d9;
+$borderGrayTypeFive: 2px solid #444444;
+$borderGrayTypeSix: 2px solid #ff8282;
+
 
 //Fonts
 $oswaldRegular: "Oswald Regular", "Arial", sans-serif;
