--- a/source/sass/blocks/categories-item.scss
+++ b/source/sass/blocks/categories-item.scss
@@ -85,6 +85,8 @@
     padding-right: 50px;
     padding-bottom: 61px;
     padding-left: 52px;
+    max-width: 570px;
+    width: 570px;
 
     background-color: #f2f2f2;
   }
@@ -105,6 +107,7 @@
 
     margin-bottom: 31px;
     padding-bottom: 0;
+    max-width: 465px;
 
     border-bottom: none;
   }
