--- a/source/sass/blocks/table-properties.scss
+++ b/source/sass/blocks/table-properties.scss
@@ -26,12 +26,14 @@
   }
 
   .table-properties__property {
+
     height: 29px;
 
     text-align: left;
   }
 
   .table-properties__property--align {
+    padding-top: 10px;
     text-align: right;
   }
 
