--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -152,11 +152,14 @@
   }
 
   .page-main__contacts {
+    padding: 0;
     display: flex;
     flex-direction: column;
   }
 
   .page-main__categories {
+    box-sizing: content-box;
+    width: 1220px;
     display: flex;
 
     justify-content: space-between;
