--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -35,6 +35,7 @@
   margin-bottom: 11px;
   padding-top: 22px;
   padding-right: 50px;
+  max-width: 100px;
 
   text-transform: uppercase;
 
@@ -42,7 +43,7 @@
 }
 
 .product__table {
-  width: 100%;
+  width: 140px;
 
   border-collapse: collapse;
 }
@@ -79,7 +80,6 @@
 
 @media (min-width: $mediumDeviceWidth) {
   .product {
-    box-sizing: border-box;
     padding-top: 55px;
     padding-right: 38px;
     padding-bottom: 40px;
@@ -97,19 +97,38 @@
     padding: 0;
   }
 
+  .product__title {
+    box-sizing: border-box;
+    max-width: 250px;
+
+    font-size: $lowFontSize;
+
+    margin-bottom: 20px;
+    padding: 0 55px;
+    padding-top: 40px;
+
+    text-align: center;
+  }
+
   .product__content {
+    max-width: 250px;
     flex-direction: column;
 
     align-items: center;
+  }
+
+  .product__table {
+    width: 250px;
+
+    border-collapse: collapse;
   }
 
   .product__wrapper {
     display: flex;
     flex-direction: column;
 
-    box-sizing: border-box;
-    height: 432px;
-    padding-top: 55px;
+    height: 336px;
+    padding-top: 52px;
     padding-right: 37px;
     padding-bottom: 39px;
     padding-left: 37px;
@@ -117,7 +136,7 @@
     border: $borderGrayTypeOne;
 
     justify-content: space-between;
-    flex-basis: 432px;
+    flex-basis: 338px;
   }
 
   .product__image-container {
@@ -127,16 +146,6 @@
 
     justify-content: center;
     align-items: flex-end;
-  }
-
-  .product__title {
-    font-size: $lowFontSize;
-
-    margin-bottom: 20px;
-    padding: 0 55px;
-    padding-top: 40px;
-
-    text-align: center;
   }
 }
 
@@ -155,7 +164,8 @@
     padding-left: 15px;
   }
 
-  .prorduct__table {
+  .product__table {
+    width: 169px;
     margin-bottom: 0;
   }
 }
