--- a/source/sass/blocks/extra-bonus.scss
+++ b/source/sass/blocks/extra-bonus.scss
@@ -33,6 +33,7 @@
 
 .extra-bonus__content {
   font-family: "Arial", sans-serif;
+  font-weight: 400;
   font-size: $basicFontSize;
   line-height: 20px;
 
