--- a/source/sass/blocks/site-grid.scss
+++ b/source/sass/blocks/site-grid.scss
@@ -1,7 +1,6 @@
 .site-grid {
-  font-family: "Oswald Regular", "Arial", sans-serif;
+  font-family: $oswaldRegular;
   font-size: 16px;
-  font-weight: 400;
   line-height: 16px;
 }
 
