--- a/source/sass/blocks/advantages-list.scss
+++ b/source/sass/blocks/advantages-list.scss
@@ -1,6 +1,7 @@
 .advantages-list {
   margin: 0;
   padding: 0;
+  font-weight: 400;
 
   list-style: none;
 }
@@ -136,14 +137,14 @@
     font-size: $basicFontSize;
     line-height: $mediumLineHeight;
 
-    width: 234px;
+    width: 254px;
     margin-bottom: 88px;
     padding-top: 112px;
-    padding-right: 90px;
+    padding-right: 70px;
     padding-bottom: 45px;
     padding-left: 0;
 
-    flex-basis: 234px;
+    flex-basis: 254px;
   }
 
   .advantages-list__item--no-margin {
