--- a/source/sass/blocks/categories-item.scss
+++ b/source/sass/blocks/categories-item.scss
@@ -31,6 +31,7 @@
 
 .categories-item__about {
   font-family: "Arial", sans-serif;
+  font-weight: 400;
   font-size: $smallFontSize;
   line-height: 18px;
 
