--- a/source/sass/blocks/program-form.scss
+++ b/source/sass/blocks/program-form.scss
@@ -140,6 +140,7 @@
 
 .program-form__text {
   font-family: "Arial", sans-serif;
+  font-weight: 400;
   font-size: $smallFontSize;
   line-height: $basicLineHeight;
 
