--- a/source/sass/blocks/progress.scss
+++ b/source/sass/blocks/progress.scss
@@ -1,5 +1,6 @@
 .progress__value {
   font-family: $oswaldRegular;
+  font-weight: 400;
   font-size: $mediumFontSize;
   line-height: $mediumLineHeight;
 
@@ -22,6 +23,7 @@
 
 .progress__type {
   font-family: "Arial", sans-serif;
+  font-weight: 400;
   font-size: $tinyFontSize;
   line-height: 12px;
 
