--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -1,15 +1,7 @@
 @font-face {
-  font-family: "Oswald Regular";
+  font-family: "Oswald";
   font-weight: 400;
   font-style: normal;
   src: url("../fonts/oswaldregular.woff2") format("woff2"),
     url("../fonts/oswaldregular.woff") format("woff");
-}
-
-@font-face {
-  font-family: "Oswald Medium";
-  font-weight: 600;
-  font-style: normal;
-  src: url("../fonts/oswaldmedium.woff2"),
-    url("../fonts/oswaldmedium.woff");
 }
