добавил фоновые адаптивные картинки

--- a/source/sass/blocks/advantages-list.scss
+++ b/source/sass/blocks/advantages-list.scss
@@ -49,6 +49,11 @@
 
   background-image: url("../img/advantage-leaf@1x.png");
   background-repeat: no-repeat;
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/advantage-leaf@2x.png");
+    background-size: 50px auto;
+  }
 }
 
 .advantages-list__second-item-img::before {
@@ -76,6 +81,11 @@
 
   background-image: url("../img/advantage-powder@1x.png");
   background-repeat: no-repeat;
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/advantage-powder@2x.png");
+    background-size: 50px auto;
+  }
 }
 
 .advantages-list__third-item-img::before {
@@ -103,6 +113,11 @@
 
   background-image: url("../img/advantage-dining@1x.png");
   background-repeat: no-repeat;
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/advantage-dining@2x.png");
+    background-size: 50px auto;
+  }
 }
 
 .advantages-list__fourth-item-img::before {
@@ -130,6 +145,11 @@
 
   background-image: url("../img/advantage-clock@1x.png");
   background-repeat: no-repeat;
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/advantage-clock@2x.png");
+    background-size: 50px auto;
+  }
 }
 
 @media (min-width: 768px) {
