изменил outline у textarea

--- a/source/sass/blocks/advantages-list.scss
+++ b/source/sass/blocks/advantages-list.scss
@@ -245,7 +245,7 @@
 
     position: absolute;
     z-index: -1;
-    bottom: -14px;
+    top: -39px;
     left: 118px;
 
     content: "1";
@@ -265,7 +265,7 @@
 
     position: absolute;
     z-index: -1;
-    bottom: -14px;
+    top: -39px;
     left: 110px;
 
     content: "2";
@@ -285,7 +285,7 @@
 
     position: absolute;
     z-index: -1;
-    bottom: -14px;
+    top: -39px;
     left: 113px;
 
     content: "3";
@@ -305,7 +305,7 @@
 
     position: absolute;
     z-index: -1;
-    bottom: -14px;
+    top: -39px;
     left: 112px;
 
     content: "4";
