--- a/source/sass/blocks/main-menu.scss
+++ b/source/sass/blocks/main-menu.scss
@@ -77,6 +77,7 @@
 
 @media (min-width: $largeDeviceWidth) {
   .main-menu__list {
+    flex-wrap: wrap;
     width: 480px;
     padding-top: 0;
     padding-right: 0;
