добавил в каталог оптимизированные контентные изображения, подключил в index.html

--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -4,21 +4,21 @@
   border-top: 1px solid #d9d9d9;
 }
 
-.social__icon--vk:hover g,
-.social__icon--inst:hover .st0,
-.social__icon--fb:hover g {
+.social__icon--vk:hover,
+.social__icon--inst:hover,
+.social__icon--fb:hover {
   fill: #68b738;
 }
 
-.social__icon--vk:focus g,
-.social__icon--inst:focus .st0,
-.social__icon--fb:focus g {
+.social__icon--vk:focus,
+.social__icon--inst:focus,
+.social__icon--fb:focus {
   fill: #68b738;
 }
 
-.social__icon--vk:active g,
-.social__icon--inst:active .st0,
-.social__icon--fb:active g {
+.social__icon--vk:active,
+.social__icon--inst:active,
+.social__icon--fb:active {
   opacity: 0.3;
 }
 
@@ -29,17 +29,17 @@
     border-top: none;
   }
 
-  .social__icon--vk svg {
+  .social__icon--vk {
     width: 30px;
     height: 16px;
   }
 
-  .social__icon--inst svg {
+  .social__icon--inst {
     width: 23px;
     height: 23px;
   }
 
-  .social__icon--fb svg {
+  .social__icon--fb {
     width: 14px;
     height: 28px;
   }
