--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -52,8 +52,8 @@
 
 @media (min-width: $mediumDeviceWidth) {
   .promo {
-    padding-right: 30px;
-    padding-left: 110px;
+    // padding-right: 30px;
+    // padding-left: 110px;
 
     text-align: left;
 
@@ -71,7 +71,7 @@
     margin-bottom: 40px;
     padding-top: 25px;
     padding-right: 180px;
-    padding-left: 8px;
+    padding-left: 97px;
   }
 
   .promo__slogan {
@@ -80,13 +80,16 @@
     line-height: $lowLineHeight;
 
     margin-bottom: 20px;
-    padding-left: 8px;
+    padding-left: 97px;
   }
 
   .promo__image {
     vertical-align: bottom;
     width: 709px;
     height: 609px;
+    position: relative;
+    bottom: 0;
+    left: 9px;
   }
 
   .promo__button {
@@ -128,7 +131,6 @@
   .promo__image {
     width: 552px;
     height: 499px;
-    position: relative;
     bottom: 275px;
     left: 370px;
   }
