поправил мелкие недочеты после проверки на реальном телефоне

--- a/source/sass/blocks/optionally.scss
+++ b/source/sass/blocks/optionally.scss
@@ -10,8 +10,7 @@
 
   &::before {
     @include title-line();
-
-    top: 17px;
+    transform: translateY(18px);
   }
 }
 
@@ -26,6 +25,8 @@
 }
 
 .optionally__title {
+  position: relative;
+  z-index: 1;
   width: $smallDeviceWidth;
   margin: 0 auto;
   margin-bottom: 28px;
@@ -80,7 +81,7 @@
     padding-bottom: 17px;
 
     &::before {
-      top: 68px;
+      transform: translateY(69px);
 
       width: 100%;
 
@@ -143,7 +144,7 @@
     padding-bottom: 25px;
 
     &::before {
-      top: 69px;
+      transform: translateY(69px);
     }
   }
 
@@ -164,7 +165,7 @@
     padding-top: 45px;
     padding-left: 40px;
 
-    background: linear-gradient(to right, transparent 0, transparent 70px, #ffffff 70px, #ffffff 663px, transparent 663px, transparent 100%);
+    background: linear-gradient(to right, transparent 0, transparent 70px, #ffffff 70px, #ffffff 363px, transparent 363px, transparent 100%);
   }
 
   .optionally__wrapper {
