--- a/source/sass/blocks/client-contacts.scss
+++ b/source/sass/blocks/client-contacts.scss
@@ -1,7 +1,6 @@
 .client-contacts {
   position: relative;
   z-index: 1;
-
   margin: 0;
   padding: 0;
   padding-top: 23px;
@@ -9,6 +8,8 @@
 
   &::before {
     @include title-line();
+
+    transform: translateY(44px);
   }
 }
 
@@ -25,6 +26,8 @@
 }
 
 .client-contacts__title {
+  position: relative;
+  z-index: 1;
   width: $smallDeviceWidth;
   margin: 0 auto;
   padding: 30px 0 0 0;
@@ -35,7 +38,7 @@
 .client-contacts__title span {
   display: inline-block;
 
-  width: 185px;
+  width: 200px;
   padding-right: 50px;
   padding-left: 20px;
 }
@@ -134,7 +137,7 @@
     padding-bottom: 23px;
 
     &::before {
-      top: 72px;
+      transform: translateY(72px);
 
       width: 100%;
 
@@ -227,7 +230,7 @@
 @media (min-width: $largeDeviceWidth) {
   .client-contacts {
     &::before {
-      top: 77px;
+      transform: translateY(77px);
     }
   }
 
