--- a/source/sass/blocks/comment.scss
+++ b/source/sass/blocks/comment.scss
@@ -12,7 +12,7 @@
   &::before {
     @include title-line();
 
-    top: 37px;
+    transform: translateY(38px);
   }
 }
 
@@ -45,7 +45,10 @@
   box-sizing: border-box;
   width: 100%;
   height: 150px;
-  padding: 13px 13px;
+  padding-top: 13px;
+  padding-right: 5px;
+  padding-bottom: 13px;
+  padding-left: 13px;
 
   border: $borderGrayTypeOne;
 }
@@ -58,7 +61,7 @@
     &::before {
       background: #68b738;
       width: 100%;
-      top: 45px;
+      transform: translateY(46px);
     }
   }
 
@@ -77,6 +80,7 @@
   }
 
   .comment__text {
+    border-width: 1px;
     font-size: $lowFontSize;
     line-height: 20px;
 
@@ -97,7 +101,7 @@
     &::before {
       background: #68b738;
       width: 100%;
-      top: 48px;
+      transform: translateY(48px);
     }
   }
 
