подкючил js для мобильного меню и для мобильного слайдера

--- a/source/sass/blocks/burger-menu.scss
+++ b/source/sass/blocks/burger-menu.scss
@@ -1,15 +1,18 @@
 .burger-menu {
   position: relative;
 
-  width: 24px;
-  height: 2px;
-
   border: none;
   background-color: #000000;
+}
+
+.burger-menu--closed {
+  width: 24px;
+  height: 2px;
+  margin-top: 4px;
 
   &::before {
     position: absolute;
-    top: -6px;
+    top: -8px;
     left: 0;
 
     width: 24px;
@@ -22,7 +25,7 @@
 
   &::after {
     position: absolute;
-    top: 6px;
+    top: 8px;
     left: 0;
 
     width: 24px;
@@ -32,21 +35,71 @@
 
     background-color: #000000;
   }
+}
 
-  &--active {
-    background-color: transparent;
-  }
+.burger-menu--opened {
+  background-color: transparent;
+  width: 24px;
+  height: 2px;
 
-  &--active::before {
+  &::before {
+    position: absolute;
     top: 0;
+    left: 0;
 
+    width: 26px;
+    height: 2px;
+
+    content: "";
     transform: rotate(-45deg);
+
+    background-color: #000000;
   }
 
-  &--active::after {
+  &::after {
+    position: absolute;
     top: 0;
+    left: 0;
 
+    width: 26px;
+    height: 2px;
+
+    content: "";
     transform: rotate(45deg);
+
+    background-color: #000000;
+  }
+}
+
+.burger-menu--no-js {
+  background-color: transparent;
+
+  &::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 24px;
+    height: 2px;
+
+    content: "";
+    transform: rotate(-45deg);
+
+    background-color: #000000;
+  }
+
+  &::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 24px;
+    height: 2px;
+
+    content: "";
+    transform: rotate(45deg);
+
+    background-color: #000000;
   }
 }
 
